--- a/src/app/features/cocktails/components/cocktails.page.scss
+++ b/src/app/features/cocktails/components/cocktails.page.scss
@@ -14,12 +14,48 @@
 }
 
 .scroll-container {
-  max-height: 60vh;
+  /* allow the container to size to content up to a sensible maximum */
+  max-height: 400px;
   overflow: auto;
 }
 
+.filters-container {
+  display: flex;
+  justify-content: flex-start;
+  gap: 2rem;
+  padding: 1rem;
+  flex-wrap: wrap;
+}
+
+
 table {
   width: 100%;
+}
+
+/* Make ID column fixed width and name column fill remaining space */
+table {
+  table-layout: fixed;
+}
+
+.col-actions{
+  width: 80px;
+  max-width: 150px;
+}
+
+.col-id {
+  width: 150px;
+  max-width: 150px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+
+.col-name {
+  /* take remaining space */
+  width: 100%;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
 
 .empty {
