--- a/src/app/features/cocktails/components/cocktails.page.html
+++ b/src/app/features/cocktails/components/cocktails.page.html
@@ -3,24 +3,51 @@
   <span class="toolbar-title">Cocktails</span>
 </mat-toolbar>
 
-<mat-card class="card">
-  <div class="card-header">
-    <mat-icon>search</mat-icon>
-    <span>Search results for "{{ store.searchTerm() }}"</span>
-  </div>
 
-  <div #scrollContainer class="scroll-container">
+<div class="filters-container">
+  <mat-slide-toggle [checked]="store.displayFavored()" (change)="store.toggleDisplayFavored()">Display only favored cocktails</mat-slide-toggle>
+</div>
+
+<div class="filters-container">
+  <app-search (search)="onSearchName($event)"></app-search>
+  <app-ingredient-search (search)="onSearchByIngredient($event)"></app-ingredient-search>
+  <app-id-search (search)="onSearchById($event)"></app-id-search>
+</div>
+
+<mat-card class="card">
+  <div #scrollContainer class="scroll-container" (scroll)="onScroll($event)">
     <table mat-table [dataSource]="store.displayedDrinks()" class="mat-elevation-z1">
+      <!-- Actions Column (context menu) -->
+      <ng-container matColumnDef="actions">
+        <th mat-header-cell *matHeaderCellDef class="col-actions"></th>
+        <td mat-cell *matCellDef="let row" class="col-actions">
+          <button mat-icon-button matSuffix aria-label="Open menu" [matMenuTriggerFor]="menu">
+            <mat-icon>more_vert</mat-icon>
+          </button>
+
+          <mat-menu #menu="matMenu">
+            <button mat-menu-item (click)="seeDetails(row)">
+              <mat-icon>visibility</mat-icon>
+              <span>See details</span>
+            </button>
+            <button mat-menu-item (click)="store.toggleFavorite(row.idDrink)">
+              <mat-icon>{{ store.isFavorited(row.idDrink) ? 'favorite' : 'favorite_border' }}</mat-icon>
+              <span>Favorite</span>
+            </button>
+          </mat-menu>
+        </td>
+      </ng-container>
+
       <!-- ID Column -->
       <ng-container matColumnDef="idDrink">
-        <th mat-header-cell *matHeaderCellDef>ID</th>
-        <td mat-cell *matCellDef="let row">{{ row.idDrink }}</td>
+        <th mat-header-cell *matHeaderCellDef class="col-id">ID</th>
+        <td mat-cell *matCellDef="let row" class="col-id">{{ row.idDrink }}</td>
       </ng-container>
 
       <!-- Name Column -->
       <ng-container matColumnDef="strDrink">
-        <th mat-header-cell *matHeaderCellDef>Name</th>
-        <td mat-cell *matCellDef="let row">{{ row.strDrink }}</td>
+        <th mat-header-cell *matHeaderCellDef class="col-name">Name</th>
+        <td mat-cell *matCellDef="let row" class="col-name">{{ row.strDrink }}</td>
       </ng-container>
 
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
@@ -31,7 +58,6 @@
       <div class="empty">No results.</div>
     }
 
-    <!-- Sentinel for infinite scroll -->
     <div #sentinel class="sentinel" aria-hidden="true"></div>
   </div>
 
